# Water-Info-Acquirer

./: .gitattributes  .gitignore  AGENTS.md  MIGRATION.md  README.md  WIA-Post.spec  WIA-Post_README.md  Water-Info-Acquirer-1.0.spec  Water-Info-Acquirer-v1.2.0-win-d-alpha-1.spec  Water-Info-Acquirer-v1.2.0-win-d.spec  Water-Info-Aquirer.spec  WaterInfoAcquirer-Test.spec  WaterInfoLauncher.spec  WaterInfoLauncherdir.spec  main.py  memo  mkdocs.yml  pyinstaller用.txt  pyproject.toml  requirements.txt  river_rainfall.py  river_rainfall.spec  test_runner.py  test_station.txt  water_info_acquirer_onedir.spec  water_info_acquirer_onefile.spec  水文データ取得・整理支援ツール.pptx  水文水質データベーステスト観測所一覧.txt
.github/workflow/: build.yml
.github/workflows/: build.yml  ci.yml  docs.yml
docs/: index.md  water_info_acquirer_リファクタリング計画書_v_1.md
docs/advanced/: index.md  jma-config.md  postprocess.md  run-with-uv.md
docs/dev/: architecture.md  build-pyinstaller.md  github-pages.md  index.md  rainfall-jma-refactor-materials.md  refactoring-plan.md  release-process.md  river-meta-rainfall-unified-design.md  time-semantics-and-fetch-window-design.md
docs/feature_suammary/: design.md  (+5 more)
issue_1/: issue_1.md
sandbox/: online_smoke_test.py
scripts/: build_waterinfo_station_index.py  download_amedas_pdf.py  generate_parquet_input_samples.py  refresh_station_indexes.py  request_probe.py  test_waterinfo_siteinfo.py  update_jma_station_availability.py  update_jma_station_index.py  update_waterinfo_station_availability.py  verify_parquet_inputs.py  verify_time_contracts.py
src/: __init__.py  __main__.py  app_names.py  bootstrap.py  datemode.py  launcher.py  main_datetime.py
src_dist/: main_datetime.py
tests/: test_api_integration.py  test_app_service.py  test_cli_entry.py  test_coverage.py  test_data_fetch.py  test_data_source.py  test_error_handling.py  test_excel_writer.py  test_exception_handler.py  test_exception_integration.py  test_export_service.py  test_fetch_service.py  test_fixtures.py  test_gui.py  test_http_client.py  test_integration.py  test_main_entry.py  test_regression.py
(+420 files in other folders)
