[project]
name = "Water-Info-Acquirer"
version = "1.2.0"
description = "公開水文データから水位・流量・雨量データを指定期間ごとに取得する。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=9.0.1",
]
